--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "ib3/ib3_admin",
     "description": "Default backend theme for ib3 installs.",
-    "type": "drupal-custom-theme",
+    "type": "drupal-theme",
     "authors": [
         {
             "name": "ib3",
